# spotify_review_classifier

./: LICENSE  README.md  config.json  config.py  main.py  pyproject.toml  trainer.py
data/: data_loader.py
models/: bert_model.py
