[tool.poetry]
name = "spotify-review-classifier"
version = "0.1.0"
description = "A classifier for spotify reviews"
authors = ["Ahmed Rebei <arebei@concordia.ca>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
